--- a/LemonadeStand_3DayStarter.csproj
+++ b/LemonadeStand_3DayStarter.csproj
@@ -43,21 +43,30 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AI.cs" />
     <Compile Include="Cup.cs" />
+    <Compile Include="Customer.cs" />
+    <Compile Include="Day.cs" />
+    <Compile Include="Game.cs" />
+    <Compile Include="Human.cs" />
     <Compile Include="IceCube.cs" />
     <Compile Include="Inventory.cs" />
     <Compile Include="Item.cs" />
     <Compile Include="Lemon.cs" />
+    <Compile Include="Pitcher.cs" />
     <Compile Include="Player.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Recipe.cs" />
     <Compile Include="Store.cs" />
     <Compile Include="SugarCube.cs" />
     <Compile Include="UserInterface.cs" />
     <Compile Include="Wallet.cs" />
+    <Compile Include="Weather.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+    <None Include="ClassDiagram1.cd" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
